[package]
name = "resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skyline = "0.2.1"
smash-arc = { git = "https://github.com/jam1garner/smash-arc", features = ["rust-zstd", "smash-runtime"] }